<resources>
    <string name="app_name">CityCare</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="news">News</string>
    <string name="map">Map</string>
    <string name="events">Events</string>
    <string name="chat">Chat</string>
    <string name="profile">Profile</string>

    <string name="what_do_people_call_you">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone_format_xxx_xxx_xxxx">Phone format: 8 (XXX)XXX-XX-XX</string>
    <string name="email_address">Email Address</string>
    <string name="country">City</string>
    <string name="life_story">Life Story</string>
    <string name="short_text">Keep it short, this is just a demo</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="login">Sign in</string>
    <string name="user_name">User Name</string>
    <string name="register_text">Don’t have an account?</string>
    <string name="register">Sign up</string>
    <string name="or">OR</string>
    <string name="logo">Logo</string>

    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="admin_page">Admin page</string>
    <string name="bus_page">Bus page</string>
    <string name="history_page">History page</string>
    <string name="passengers_page">Passengers page</string>
    <string name="settings_page">Settings page</string>
    <string name="statistics_page">Statistics page</string>
    <string name="tickets_page">Tickets page</string>
    <string name="today">Today</string>
    <string name="title">Title</string>
    <string name="desc"><b>Description</b></string>
    <string name="addTask">Add Task</string>
    <string name="message">Do you really want to exit their apps?</string>
    <string name="remove">Удалить рейс</string>
    <string name="no_btn">Нет</string>
    <string name="yes_btn">Да</string>
    <string name="author">Meiirzhan</string>
    <string name="my_profile">My Profile</string>
    <string name="notifications">Notifications</string>
    <string name="statistics">Statistics</string>
    <string name="history">History</string>
    <string name="settings">Settings</string>
    <string name="faq">FAQ</string>
    <string name="logout">logOut</string>
    <string name="share_with_friends">Share with friends</string>
    <string name="notification_page">Notification Page</string>
    <string name="delete_task">Delete Task</string>
    <string name="person_name">Sailaubek Meiirzhan</string>
    <string name="android_developer">Android developer</string>
    <string name="remember">Remember me</string>
    <string name="share_with_app">Share with App</string>
    <string name="share_desc">By sharing with this application, you will greatly help us, and most importantly, nature and the cleansing of the city. Thanks to you, the number of volunteers ready to join you in one row can increase.</string>
    <string name="share">Share</string>
    <string name="toolbar_title">CityCare</string>
    <string name="refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="notification_appBar">Notification</string>
    <string name="no_notifications">No notifications !</string>
    <string name="source">Source</string>
    <string name="description">Description</string>
    <string name="published_at">Published at</string>
    <string name="search_bar">Search Bar</string>
    <string name="bookmark">Bookmark</string>
    <string name="profile_desc">City Care is an application for volunteers where you can also find many new acquaintances. Download the app and start climbing with City Care. The application is available for all users starting from Android 6+.</string>
    <string name="invite_friends">Invite Friends</string>
    <string name="about_app">About app</string>
    <string name="profile_settings_title">Profile Settings Title</string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="citycare">City Care is a project where many people can do what they love and make new friends. Here you can do good deeds for the benefit of the ecology of our country. We strongly recommend that you download our application, because landscaping and cleansing the environment is very serious and most importantly useful for everyone.</string>
    <string name="share_content">You can fully familiarize yourself with our application and, if you wish, download it by clicking on this link: https://citycare.vercel.app/</string>

    <string name="notes">My Notes</string>
    <string name="notes_title">Notes Title</string>
    <string name="notes_sub_title">Notes Sub Title</string>
    <string name="notes_desc">Enter Note Here</string>
    <string name="web_url">Enter Web Url</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="storage_permission_text">This app needs access to your storage.</string>
    <string name="reset_password">Reset password</string>
    <string name="did_you_forget_your_password">Forgot your password ?</string>
    <string name="done">Done</string>
</resources>