<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.ResetPasswordActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/resetPasswordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="70dp"
                android:paddingBottom="20dp"
                android:text="@string/reset_password"
                android:textColor="@color/green_color"
                android:textSize="32sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/resetPasswordField"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/resetPasswordField"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginBottom="16dp"
                android:hint="@string/email_address"
                app:endIconDrawable="@drawable/ic_baseline_cancel_24"
                app:endIconMode="clear_text"
                app:endIconTint="@color/red"
                app:hintAnimationEnabled="true"
                app:layout_constraintBottom_toTopOf="@id/resetPasswordTitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resetPasswordTitle"
                app:startIconDrawable="@drawable/ic_baseline_account_box_signin_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/resetPasswordEd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/resetPasswordWithEmailBtn"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:backgroundTint="@color/green_color"
                android:padding="14dp"
                android:text="@string/done"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/resetPasswordField" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </FrameLayout>

</layout>